--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <meta name="author" content="">
 
     
-    <title>IDEALS LANKA MOTORS (PVT) LTD</title>
+    <title>IDEALS LANKA</title>
+    <link rel="icon" type="image/x-icon" href="public/favicon.ico">
     
 
     <!-- Bootstrap Core CSS -->
